devops/k8s/st/administration.api/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sosadminapi-st
  labels:
    name: sosadminapi-st
