devops/k8s/st/administration.api/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi-st
spec:
  ports:
    - port: 5005
      targetPort: 5005
  selector:
    app: sosadminapi-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sosadminapi-api
  name: sosadminapi-api
  namespace: sosadminapi-st
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sosadminapi-api
  strategy: 
      type: Recreate
  template:
    metadata:
      annotations:
        logging: "true"
      labels:
        app: sosadminapi-api
    spec:
      serviceAccountName: ""
      topologySpreadConstraints: # try to spread out api instances over available nodes
      - labelSelector:
          matchLabels:
            app: sosadminapi-api # pods labeled app: sosadminapi-api
        maxSkew: 1
        topologyKey: kubernetes.io/hostname # 1 node = 1 topology
        whenUnsatisfiable: DoNotSchedule
      containers:
        - env:
          - name: ASPNETCORE_ENVIRONMENT
            value: k8s-st
          - name: HangfireDbPassword
            valueFrom:
                secretKeyRef:
                  key: HangfireDbPassword
                  name: sosadminapi-secret
          - name: HangfireDbUserName
            valueFrom:
                secretKeyRef:
                  key: HangfireDbUserName
                  name: sosadminapi-secret
          - name: InstrumentationKey
            valueFrom:
                secretKeyRef:
                  key: InstrumentationKey
                  name: sosadminapi-secret
          - name: ProcessDbPassword
            valueFrom:
                secretKeyRef:
                  key: ProcessDbPassword
                  name: sosadminapi-secret
          - name: ProcessDbUserName
            valueFrom:
                secretKeyRef:
                  key: ProcessDbUserName
                  name: sosadminapi-secret
          - name: VerbatimDbPassword
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbPassword
                  name: sosadminapi-secret
          - name: VerbatimDbUserName
            valueFrom:
                secretKeyRef:
                  key: VerbatimDbUserName
                  name: sosadminapi-secret
          - name: ApplicationInsights
            value: '{"InstrumentationKey": "SECRET_PLACEHOLDER", "EnableRequestBodyLogging": false,"EnableSearchResponseCountLogging": false}'
          - name: AllowedOrigins
            value: '*' 
          - name: SosApiConfiguration
            value: '{"ObservationsApiAddresses": [ "https://sos-search-st.artdata.slu.se/" ], "ElasticSearchProxyAddresses": [ "https://sos-proxy-st.wt.artdata.slu.se/" ], "AnalysisApiAddresses": [ "https://sos-analysis-st.wt.artdata.slu.se/" ], "DataStewardshipApiAddresses": [ "https://datastewardship-st.wt.artdata.slu.se/"]}'
          - name: ProcessConfiguration
            value: '{"TaxonAttributeServiceConfiguration": {"BaseAddress": "https://taxonattributeservice.artdata.slu.se/api", "AcceptHeaderContentType": "application/json"}, "TaxonServiceConfiguration": {"BaseAddress": "https://taxonservice.artdata.slu.se/DarwinCore/DarwinCoreArchiveFile?version=custom", "AcceptHeaderContentType": "application/text", "TaxonApiAddress": "https://taxonapi-st.wt.artdata.slu.se/darwincore/download?version=custom"}}'
          - name: UserServiceConfiguration
            value: '{"BaseAddress": "https://artdatauser-st.artdata.slu.se/api", "AcceptHeaderContentType": "application/json", "UserAdmin2ApiBaseAddress": "https://useradmin2-api-st.wt.artdata.slu.se", "ClientId": "SOS", "Scope": "useradmin.api SOS.Observations.Protected openid", "ClientSecret": "SECRET_PLACEHOLDER", "TokenUrl": "http://useradmin2-auth-st.wt.artdata.slu.se/connect/token", "TokenExpirationBufferInSeconds": 300, "IdentityProvider": {"Authority": "https://useradmin2-auth-st.wt.art [...]
          - name: ImportConfiguration
            value: '{"ArtportalenConfiguration": {"ConnectionStringBackup": "Server=SpeciesObservationSwe_test.db.slu.se;Database=SpeciesObservationSwe_test;Integrated Security=sspi;MultipleActiveResultSets=true;Pooling=true;Max Pool Size=1000;Min Pool Size=0;Persist Security Info=false;TrustServerCertificate=true;ApplicationIntent=ReadOnly;Connection Timeout=30;Connection Lifetime=0;", "ConnectionStringLive": "Server=SpeciesObservationSwe_test.db.slu.se;Database=SpeciesObservationSwe_test;Integ [...]
          - name: VerbatimDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}], "ReplicaSetName": null, "DatabaseName": "sos-harvest-st", "UseTls": false, "AuthenticationDb": "admin", "ReadBatchSize": 10000, "WriteBatchSize": 10000}'
          - name: ProcessDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}], "ReplicaSetName": null, "DatabaseName": "sos-st", "UseTls": false, "AuthenticationDb": "admin", "ReadBatchSize": 10000, "WriteBatchSize": 10000}'
          - name: HangfireDbConfiguration
            value: '{"UserName": "SECRET_PLACEHOLDER", "Password": "SECRET_PLACEHOLDER", "Hosts": [{"Name": "artmongo-t-1.artdata.slu.se","Port": 27017}], "ReplicaSetName": null, "DatabaseName": "sos-hangfire-st", "UseTls": false, "AuthenticationDb": "admin", "JobExpirationDays": 3}'
          image: adbpocreg.azurecr.io/sosadminapi-api:$(Parameters.ImageTag)
          name: sosadminapi-api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5005
          readinessProbe: # ready to accept traffic, failure = stops routing traffic to this pod but does not restart the pod!
            httpGet:
              path: /healthz
              port: 5005
              httpHeaders:
              - name: Host
                value: KubernetesReadinessProbe
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 30 # runs every 30 seconds
          resources: {}
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
